fix(shared): fix song item card overflow

--- a/src/app/shared/components/song-list-item/song-list-item.component.scss
+++ b/src/app/shared/components/song-list-item/song-list-item.component.scss
@@ -1,5 +1,9 @@
 @use 'tokens' as tokens;
 
+:host {
+  min-width: 0px;
+}
+
 mat-list-item {
   mat-icon {
     display: none;
